--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=Karthikeya
 spring.datasource.password=SuperCardboard123
 
 # JPA and Hibernate configuration
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #hibernate dialect will be auto selected no need 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -23,3 +23,6 @@ server.port=8050
 # Sets the logging level for Spring's JDBC core to DEBUG, enabling detailed logging of SQL queries and parameters for troubleshooting.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 logging.level.org.springframework.jdbc.core=DEBUG
+
+# Disable Thymeleaf template cache in development to pick up template edits
+spring.thymeleaf.cache=false
