Fixed Invetory table completely

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=Karthikeya
 spring.datasource.password=SuperCardboard123
 
 # JPA and Hibernate configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 #hibernate dialect will be auto selected no need 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
